--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.1",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
@@ -18,6 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
