--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@sparticuz/chromium": "^127.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
@@ -22,6 +23,7 @@
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "puppeteer": "^23.4.1",
+    "puppeteer-core": "^23.4.1",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
